tests/lang/compile_fail/nested_type_duplicate.kojs
struct Owner
  struct Nested
    y: Int
  end
end

struct Owner.Nested
  z: Int
end

1.print()
